src/objects/FA_FV_Analysis__c/FA_FV_Analysis__c.object-meta.xml
<CustomObject>
    <label>FV/FA Analysis</label>
    <nameField>
        <label>FV/FA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FV/FA Analysis</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>