src/objects/FA_FV_Analysis__c/fields/CA_Required__c.field-meta.xml
<CustomField>
    <fullName>CA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA Required</label>
    <type>Checkbox</type>
</CustomField>