src/objects/FA_FV_Analysis__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>