src/objects/FA_FV_Analysis__c/fields/Complition_Date__c.field-meta.xml
<CustomField>
    <fullName>Complition_Date__c</fullName>
    <label>Complition Date</label>
    <type>Date</type>
</CustomField>