src/objects/FA_FV_Analysis__c/fields/Component_Description__c.field-meta.xml
<CustomField>
    <fullName>Component_Description__c</fullName>
    <label>Component Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>