src/objects/FA_FV_Analysis__c/fields/Component_P_N__c.field-meta.xml
<CustomField>
    <fullName>Component_P_N__c</fullName>
    <label>Component P/N</label>
    <length>100</length>
    <type>Text</type>
</CustomField>