src/objects/FA_FV_Analysis__c/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <label>Conclusion</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>