src/objects/FA_FV_Analysis__c/fields/Containment__c.field-meta.xml
<CustomField>
    <fullName>Containment__c</fullName>
    <label>Containment</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>