src/objects/FA_FV_Analysis__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>