src/objects/FA_FV_Analysis__c/fields/Customer_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Serial_Number__c</fullName>
    <label>Customer Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>