src/objects/FA_FV_Analysis__c/fields/Date_Code__c.field-meta.xml
<CustomField>
    <fullName>Date_Code__c</fullName>
    <label>Date Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>