src/objects/FA_FV_Analysis__c/fields/Done_By__c.field-meta.xml
<CustomField>
    <fullName>Done_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Done By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FA_FV_Analysis1</relationshipName>
    <type>Lookup</type>
</CustomField>