src/objects/FA_FV_Analysis__c/fields/FA_Findings__c.field-meta.xml
<CustomField>
    <fullName>FA_Findings__c</fullName>
    <inlineHelpText>FA Findings</inlineHelpText>
    <label>FA Findings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>