src/objects/FA_FV_Analysis__c/fields/FA_FV_Type__c.field-meta.xml
<CustomField>
    <fullName>FA_FV_Type__c</fullName>
    <label>FV/FA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Failure Analysis</fullName>
            </value>
            <value>
                <fullName>Failure Verification</fullName>
            </value>
            <value>
                <fullName>Secondary Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>