src/objects/FA_FV_Analysis__c/fields/Failure_Description_at_the_Module_Level__c.field-meta.xml
<CustomField>
    <fullName>Failure_Description_at_the_Module_Level__c</fullName>
    <label>Failure Description at the Module Level</label>
    <length>30</length>
    <type>Text</type>
</CustomField>