src/objects/FA_FV_Analysis__c/fields/Failure_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Failure_Mechanism__c</fullName>
    <label>Failure Mechanism</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>