src/objects/FA_FV_Analysis__c/fields/Final_Function_Test__c.field-meta.xml
<CustomField>
    <fullName>Final_Function_Test__c</fullName>
    <label>Final Function Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>