src/objects/FA_FV_Analysis__c/fields/Final_Functional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Final_Functional_Comments__c</fullName>
    <label>Final/Functional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>