src/objects/FA_FV_Analysis__c/fields/Findings__c.field-meta.xml
<CustomField>
    <fullName>Findings__c</fullName>
    <label>Findings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Faulty IB</fullName>
            </value>
            <value>
                <fullName>Faulty MB</fullName>
            </value>
            <value>
                <fullName>Faulty Optics</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Multiple Faults</fullName>
            </value>
            <value>
                <fullName>NFF</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>