src/objects/FA_FV_Analysis__c/fields/FV_Findings__c.field-meta.xml
<CustomField>
    <fullName>FV_Findings__c</fullName>
    <label>FV Findings</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>