src/objects/FA_FV_Analysis__c/fields/FV_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>FV_Report_Status__c</fullName>
    <label>FV Report Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>