src/objects/FA_FV_Analysis__c/fields/FV_Result__c.field-meta.xml
<CustomField>
    <fullName>FV_Result__c</fullName>
    <description>This formula field represents the final results of the Temp Bert, VMI, and Final Function Test picklists.</description>
    <formula>if(AND( ispickval(Temp_BERT__c,&quot;PASS&quot;),  ispickval(VMI__c,&quot;PASS&quot;), ispickval(Final_Function_Test__c,&quot;PASS&quot;)),&quot;PASS&quot;,
if(AND( ispickval(Temp_BERT__c,&quot;N/A&quot;),  ispickval(VMI__c,&quot;PASS&quot;), ispickval(Final_Function_Test__c,&quot;PASS&quot;)), &quot;PASS&quot;,
&quot;FAIL&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula field represents the final results of the Temp Bert, VMI, and Final Function Test picklists.</inlineHelpText>
    <label>FV Result</label>
    <type>Text</type>
</CustomField>