src/objects/FA_FV_Analysis__c/fields/Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id__c</fullName>
    <label>Legacy Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>