src/objects/FA_FV_Analysis__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>FV/FA #</label>
    <type>AutoNumber</type>
</CustomField>