src/objects/FA_FV_Analysis__c/fields/Old_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Id__c</fullName>
    <externalId>true</externalId>
    <label>Old Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>