src/objects/FA_FV_Analysis__c/fields/Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Id__c</fullName>
    <label>Order Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>