src/objects/FA_FV_Analysis__c/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <label>Other Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>