src/objects/FA_FV_Analysis__c/fields/Parent_Legacy_id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Legacy_id__c</fullName>
    <label>Parent Legacy Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>