src/objects/FA_FV_Analysis__c/fields/Primary_Failure__c.field-meta.xml
<CustomField>
    <fullName>Primary_Failure__c</fullName>
    <label>Primary Failure</label>
    <length>30</length>
    <type>Text</type>
</CustomField>