src/objects/FA_FV_Analysis__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <label>Problem Statement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>