src/objects/FA_FV_Analysis__c/fields/RC_Analysis__c.field-meta.xml
<CustomField>
    <fullName>RC_Analysis__c</fullName>
    <label>RC Analysis</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>