src/objects/FA_FV_Analysis__c/fields/Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment__c</fullName>
    <label>Risk Assessment</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>