src/objects/FA_FV_Analysis__c/fields/Root_Cause_Statement__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Statement__c</fullName>
    <label>Root Cause Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>