src/objects/FA_FV_Analysis__c/fields/Secondary_Failure_Code__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Failure_Code__c</fullName>
    <label>Secondary Failure Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laser - Dislocations</fullName>
            </value>
            <value>
                <fullName>Laser - Intermittent Resist</fullName>
            </value>
            <value>
                <fullName>Laser- PD</fullName>
            </value>
            <value>
                <fullName>NTF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>