src/objects/FA_FV_Analysis__c/fields/Statuspick__c.field-meta.xml
<CustomField>
    <fullName>Statuspick__c</fullName>
    <label>Status - DO NOT USE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>