src/objects/FA_FV_Analysis__c/fields/Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Suppliers__c</fullName>
    <label>Suppliers</label>
    <length>100</length>
    <type>Text</type>
</CustomField>