src/objects/FA_FV_Analysis__c/fields/Temp_Bert_Comments__c.field-meta.xml
<CustomField>
    <fullName>Temp_Bert_Comments__c</fullName>
    <label>Temp Bert Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>