src/objects/FA_FV_Analysis__c/fields/Tertiary_Failure__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Failure__c</fullName>
    <label>Tertiary Failure</label>
    <length>30</length>
    <type>Text</type>
</CustomField>