src/objects/FA_FV_Analysis__c/fields/Traceability_Information__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Information__c</fullName>
    <label>Traceability Information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>