src/objects/FA_FV_Analysis__c/fields/VMI__c.field-meta.xml
<CustomField>
    <fullName>VMI__c</fullName>
    <label>VMI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>