src/objects/FA_FV_Analysis__c/fields/VMI_Comments__c.field-meta.xml
<CustomField>
    <fullName>VMI_Comments__c</fullName>
    <label>VMI Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>