src/objects/FA_FV_Analysis__c/recordTypes/FA_Analysis.recordType-meta.xml
<RecordType>
    <fullName>FA_Analysis</fullName>
    <active>true</active>
    <label>FA Analysis</label>
</RecordType>