src/objects/FA_FV_Analysis__c/recordTypes/FV_Analysis.recordType-meta.xml
<RecordType>
    <fullName>FV_Analysis</fullName>
    <active>true</active>
    <label>FV Analysis</label>
</RecordType>