src/objects/FA_FV_Analysis__c/listViews/FA_Analysis.listView-meta.xml
<ListView>
    <fullName>FA_Analysis</fullName>
    <columns>NAME</columns>
    <columns>FA_FV_Status__c</columns>
    <columns>FA_FV_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FA_FV_Analysis__c.FA_Analysis</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Integration User</value>
    </filters>
    <label>FA Analysis</label>
</ListView>