src/objects/FA_FV_Analysis__c/listViews/FV_Analysis.listView-meta.xml
<ListView>
    <fullName>FV_Analysis</fullName>
    <columns>NAME</columns>
    <columns>FA_FV_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FA_FV_Analysis__c.FV_Analysis</value>
    </filters>
    <label>FV Analysis</label>
</ListView>